--- a/css/mobile.css
+++ b/css/mobile.css
@@ -25,6 +25,7 @@
 		text-align: center;
 		/* background: #ef4c03; */
 		background: #ff6700;
+		border-bottom: 2px solid #FFF;
 	}
 	.menu ul li a{
 		color: #FFF;
@@ -33,5 +34,28 @@
 
 	.main-header{
 		padding: 15px 0;
+	}
+
+	.deptos.deptos-ebooks img{
+		width: 50%;
+		margin: 0 auto;
+	}
+
+	.footer{
+		height: 100%;
+		float: left;
+	}
+	.footer img{
+		width: 40%;
+		float: none;
+	}
+	.footer ul{
+		display: block;
+
+	}
+	.footer ul li{
+		padding: 0;
+		margin: 0;
+		line-height: normal;
 	}
 }
